# dbt-core-northwind

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dbt_northwind/: README.md  dbt_project.yml  packages.yml
dbt_northwind/macros/: clean_field.sql
dbt_northwind/macros/business_rules/: total_sales.sql
dbt_northwind/macros/utils/: clean_field.sql
dbt_northwind/models/core/: dim_customers.sql  dim_employees.sql  dim_products.sql  dim_shippers.sql  dim_suppliers.sql  dim_territories.sql  fact_orders.sql
dbt_northwind/models/mart/: mart_acumulated_revenues.sql  mart_customer_analysis.sql  mart_orders_summary.sql  mart_sales_performance.sql  mart_top_products.sql
dbt_northwind/models/raw/: _raw_sources.yml  raw_categories.sql  raw_customers.sql  raw_employee_territories.sql  raw_employees.sql  raw_order_details.sql  raw_orders.sql  raw_products.sql  raw_region.sql  raw_shippers.sql  raw_suppliers.sql  raw_territories.sql
dbt_northwind/models/stg/: stg_categories.sql  stg_customers.sql  stg_employee_territories.sql  stg_employees.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql  stg_region.sql  stg_shippers.sql  stg_suppliers.sql  stg_territories.sql
tools/: commit.txt
